KAD-774: adjust to Java 21 deprecations